# git_for_linux_skillbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  launch.sh  model_dc_motor.py  pyproject.toml
