[tool.poetry]
name = "skillbox-git-linux"
version = "0.1.0"
description = ""
authors = ["Aleksandr <kravtsov@____.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.16"
black = "^25.1.0"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"
